syntax = "proto3";

package com.vportnov.locations.grpc;

import "google/protobuf/timestamp.proto";


service LocationService {
  rpc createLocations (Locations) returns (stream LocationReply) {}
  rpc getLocations (Query) returns (stream LocationReply) {}
  rpc updateLocations (Locations) returns (stream LocationReply) {}
  rpc locationStats (Period) returns (stream LocationStatsReply) {}
  rpc deleteLocations (Ids) returns (CountReply) {}
}

message Period {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2; 
}

message Query {
  Period period = 1;
  Ids ids = 2;
}

message Ids {
  repeated string value = 1;
}

message Count {
  int32 value = 1;
}

message BigDecimal {
  bytes unscaled = 1;
  int32 scale = 2;
}

message LocationStats {
  google.protobuf.Timestamp date = 1;
  uint32 count = 2;
}

message Location {
  string id = 1;
  BigDecimal longitude = 2;
  BigDecimal latitude = 3;
  google.protobuf.Timestamp created = 4;
}

message Locations {
  repeated Location list = 1;
}

message ServerError {
  string uuid = 1;
  string message = 2;
  Kind kind = 3;

  enum Kind {
    Internal = 0;
    IllegalArgument = 1;
    NoSuchElement = 2;
  }
}

message CountReply {
  oneof message {
    Count count = 1;
    ServerError serverError = 2;
  }
}

message LocationStatsReply {
  oneof message {
    LocationStats locationStats = 1;
    ServerError serverError = 2;
  }
}

message LocationReply {
  oneof message {
    Location location = 1;
    ServerError serverError = 2;
  }
}
